# ntpu-linebot

./: .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  app.py  lineBotUtil.py  pyproject.toml  render.yaml  requirements.txt  sticker.py
.devcontainer/: Dockerfile  devcontainer.json  shell_theme.omp.json
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  cicd-check.yml  create-preview.yml  create-render-preview.yml  create-update-preview.yml  delete-preview.yml  dockerhub-release.yml  release-latest.yml  release-tag.yml  render-preview.yml  update-preview.yml  upsert-preview.yml
docker/: .env.example  docker-compose.yml  update.sh
ntpu_linebot/: __init__.py  abs_bot.py  line_api_util.py  line_bot_util.py  normal_util.py  route_util.py  sticker_util.py
ntpu_linebot/contact/: __init__.py  bot.py  contact.py  request.py  util.py
ntpu_linebot/course/: __init__.py  bot.py  course.py  request.py  util.py
ntpu_linebot/id/: __init__.py  bot.py  request.py  util.py
rich_menu/default/: default_richmenu.json
src/: abs_bot.py  botRoute.py  bot_route.py  bot_routes.py  idBot.py  id_bot.py  id_request.py  id_util.py  lineBotUtil.py  line_bot_util.py  requestUtil.py  request_util.py  route_util.py  sticker.py  stickerUtil.py  sticker_util.py  studentUtil.py  student_util.py
