[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
setuptools = "^75.7.0"
fake-useragent = "^2.0.3"
aiohttp = {extras = ["speedups"], version = "^3.11.11"}
lxml = "^5.3.0"
beautifulsoup4 = "^4.12.3"
line-bot-sdk = "^3.14.2"
cachetools = "^5.5.0"
asyncache = "^0.3.1"
sanic = "^24.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
