[tool.poetry]
package-mode = false

[project]
name = "ntpu-linebot"
version = "0"
requires-python = "~=3.13"
dependencies = [
    "asyncache (>=0.3.1,<0.4.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "cachetools (>=5.5.1,<6.0.0)",
    "fake-useragent (>=2.0.3,<3.0.0)",
    "line-bot-sdk (>=3.14.5,<4.0.0)",
    "lxml (>=5.3.0,<6.0.0)",
    "sanic (>=24.12.0,<25.0.0)",
    "setuptools (>=75.8.0,<76.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
