[tool.poetry]
package-mode = false

[project]
name = "ntpu-linebot"
version = "0"
requires-python = "~=3.13"
dependencies = [
    "asyncache (>=0.3.1,<0.4.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "cachetools (>=5.5.2,<5.6.0)",
    "fake-useragent (>=2.2.0,<3.0.0)",
    "line-bot-sdk (>=3.17.1,<4.0.0)",
    "lxml (>=5.4.0,<6.0.0)",
    "sanic (>=25.3.0,<26.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
